<resources>
    <string name="app_name">laba 5</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="app_logo">App logo</string>
    <string name="next">Next</string>
    <string name="user_avatar">User Avatar</string>
    <string name="sender">Sender</string>
    <string name="message_text">Message text</string>
    <string name="_10_00">10:00</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_to_settings">Go to settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_language">Save Language</string>
    <string name="save_font_size">Save Font Size</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language:</string>
    <string name="font_size">Font Size:</string>
    <string name="notifications">Notifications</string>
</resources>