<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/senderProfile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp" />

    <TextView
        android:id="@+id/senderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sender"
        app:layout_constraintStart_toEndOf="@id/senderProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/messageText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/message_text"
        app:layout_constraintStart_toEndOf="@id/senderProfile"
        app:layout_constraintTop_toBottomOf="@id/senderName"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/messageTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
